--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,11 @@
 <body>
 
 <h1>Hello!</h1>
-
-<p>This is my first website.</p>
+<h2>
+    Computer Fundamental Course by Dennis</h2>
+</h2>
+<p>This is the home Page.</p>
+<a href="http://www.google.com" target="_blank">Go to Google Search</a>
 
 </body>
 </html>
